--- a/package.json
+++ b/package.json
@@ -16,25 +16,25 @@
         "can:release": "npm run build && npm run test"
     },
     "devDependencies": {
-        "@rollup/plugin-html": "^0.2.3",
-        "autoprefixer": "^9.8.6",
-        "cssnano": "^4.1.11",
-        "jest": "^26.6.3",
-        "jest-cli": "^26.6.3",
+        "@rollup/plugin-html": "^0.2.4",
+        "autoprefixer": "^10.4.8",
+        "cssnano": "^5.1.13",
+        "jest": "^28.1.3",
+        "jest-cli": "^28.1.3",
         "jest-transform-stub": "^2.0.0",
-        "postcss-url": "^8.0.0",
-        "rollup": "^2.52.2",
+        "postcss-url": "^10.1.3",
+        "rollup": "^2.78.1",
         "rollup-plugin-copy": "^3.4.0",
         "rollup-plugin-html": "^0.2.1",
-        "rollup-plugin-postcss": "^3.1.8",
-        "rollup-plugin-terser": "^6.1.0",
-        "rollup-plugin-typescript2": "^0.27.3",
-        "ts-jest": "^26.5.6",
-        "typescript": "^3.9.10"
+        "rollup-plugin-postcss": "^4.0.2",
+        "rollup-plugin-terser": "^7.0.2",
+        "rollup-plugin-typescript2": "^0.33.0",
+        "ts-jest": "^28.0.8",
+        "typescript": "^4.7.4"
     },
     "dependencies": {
-        "@aurelia/kernel": "dev",
-        "@aurelia/runtime": "dev",
-        "@aurelia/runtime-html": "dev"
+        "@aurelia/kernel": "^2.0.0-alpha.38",
+        "@aurelia/runtime": "^2.0.0-alpha.38",
+        "@aurelia/runtime-html": "^2.0.0-alpha.38"
     }
 }
