--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "aurelia2-table",
-    "version": "0.0.6",
+    "version": "0.0.7",
     "description": "A port of the Aurelia Table plugin to v2",
     "main": "dist/aurelia2-table.js",
     "module": "dist/aurelia2-table.es.js",
@@ -10,7 +10,8 @@
     "author": "Dwayne Charrington <dwaynecharrington@gmail.com",
     "license": "MIT",
     "scripts": {
-        "build": "rollup -c && tsc",
+        "build": "rollup -c",
+        "prebuild": "tsc --emitDeclarationOnly",
         "build:watch": "rollup -cw",
         "test": "jest",
         "can:release": "npm run build && npm run test"
@@ -25,6 +26,8 @@
         "postcss-url": "^10.1.3",
         "rollup": "^2.78.1",
         "rollup-plugin-copy": "^3.4.0",
+        "rollup-plugin-dts": "^4.2.2",
+        "rollup-plugin-esbuild": "^4.10.1",
         "rollup-plugin-html": "^0.2.1",
         "rollup-plugin-postcss": "^4.0.2",
         "rollup-plugin-terser": "^7.0.2",
@@ -33,8 +36,10 @@
         "typescript": "^4.7.4"
     },
     "dependencies": {
-        "@aurelia/kernel": "^2.0.0-alpha.38",
-        "@aurelia/runtime": "^2.0.0-alpha.38",
-        "@aurelia/runtime-html": "^2.0.0-alpha.38"
+        "@aurelia/kernel": "2.0.0-alpha.39",
+        "@aurelia/metadata": "2.0.0-alpha.39",
+        "@aurelia/platform": "2.0.0-alpha.39",
+        "@aurelia/runtime": "2.0.0-alpha.39",
+        "@aurelia/runtime-html": "2.0.0-alpha.39"
     }
 }
