--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "repository": "https://github.com/Vheissu/aurelia2-table",
     "author": "Dwayne Charrington <dwaynecharrington@gmail.com",
     "license": "MIT",
+    "type": "module",
     "scripts": {
         "build": "rollup -c",
         "prebuild": "tsc --emitDeclarationOnly",
@@ -17,29 +18,31 @@
         "can:release": "npm run build && npm run test"
     },
     "devDependencies": {
-        "@rollup/plugin-html": "^0.2.4",
-        "autoprefixer": "^10.4.8",
-        "cssnano": "^5.1.13",
-        "jest": "^28.1.3",
-        "jest-cli": "^28.1.3",
+        "@aurelia/plugin-conventions": "2.0.0-beta.23",
+        "@rollup/plugin-html": "^2.0.0",
+        "@rollup/plugin-json": "^6.1.0",
+        "@rollup/plugin-terser": "^0.4.4",
+        "autoprefixer": "^10.4.21",
+        "cssnano": "^7.0.6",
+        "jest": "^29.7.0",
+        "jest-cli": "^29.7.0",
         "jest-transform-stub": "^2.0.0",
         "postcss-url": "^10.1.3",
-        "rollup": "^2.78.1",
+        "rollup": "^4.35.0",
         "rollup-plugin-copy": "^3.4.0",
-        "rollup-plugin-dts": "^4.2.2",
-        "rollup-plugin-esbuild": "^4.10.1",
+        "rollup-plugin-dts": "^6.1.1",
+        "rollup-plugin-esbuild": "^6.2.1",
         "rollup-plugin-html": "^0.2.1",
         "rollup-plugin-postcss": "^4.0.2",
-        "rollup-plugin-terser": "^7.0.2",
-        "rollup-plugin-typescript2": "^0.33.0",
-        "ts-jest": "^28.0.8",
-        "typescript": "^4.7.4"
+        "rollup-plugin-typescript2": "^0.36.0",
+        "ts-jest": "^29.2.6",
+        "typescript": "^5.8.2"
     },
     "dependencies": {
-        "@aurelia/kernel": "2.0.0-alpha.39",
-        "@aurelia/metadata": "2.0.0-alpha.39",
-        "@aurelia/platform": "2.0.0-alpha.39",
-        "@aurelia/runtime": "2.0.0-alpha.39",
-        "@aurelia/runtime-html": "2.0.0-alpha.39"
+        "@aurelia/kernel": "2.0.0-beta.23",
+        "@aurelia/metadata": "2.0.0-beta.23",
+        "@aurelia/platform": "2.0.0-beta.23",
+        "@aurelia/runtime": "2.0.0-beta.23",
+        "@aurelia/runtime-html": "2.0.0-beta.23"
     }
 }
