--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "repository": "https://github.com/Vheissu/aurelia2-table",
     "author": "Dwayne Charrington <dwaynecharrington@gmail.com",
     "license": "MIT",
-    "type": "module",
+
     "scripts": {
-        "build": "rollup -c",
+        "build": "rollup -c --bundleConfigAsCjs",
         "prebuild": "tsc --emitDeclarationOnly",
-        "build:watch": "rollup -cw",
+        "build:watch": "rollup -cw --bundleConfigAsCjs",
         "test": "jest",
         "can:release": "npm run build && npm run test"
     },
