--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "aurelia2-table",
-    "version": "0.0.7",
+    "version": "0.0.8",
     "description": "A port of the Aurelia Table plugin to v2",
     "main": "dist/aurelia2-table.js",
     "module": "dist/aurelia2-table.es.js",
@@ -13,36 +13,22 @@
     "scripts": {
         "build": "rollup -c --bundleConfigAsCjs",
         "prebuild": "tsc --emitDeclarationOnly",
-        "build:watch": "rollup -cw --bundleConfigAsCjs",
-        "test": "jest",
-        "can:release": "npm run build && npm run test"
+        "build:watch": "rollup -cw --bundleConfigAsCjs"
     },
     "devDependencies": {
-        "@aurelia/plugin-conventions": "2.0.0-beta.23",
+        "@aurelia/plugin-conventions": "2.0.0-beta.24",
         "@rollup/plugin-html": "^2.0.0",
         "@rollup/plugin-json": "^6.1.0",
         "@rollup/plugin-terser": "^0.4.4",
-        "autoprefixer": "^10.4.21",
-        "cssnano": "^7.0.6",
-        "jest": "^29.7.0",
-        "jest-cli": "^29.7.0",
-        "jest-transform-stub": "^2.0.0",
-        "postcss-url": "^10.1.3",
-        "rollup": "^4.35.0",
-        "rollup-plugin-copy": "^3.4.0",
-        "rollup-plugin-dts": "^6.1.1",
-        "rollup-plugin-esbuild": "^6.2.1",
-        "rollup-plugin-html": "^0.2.1",
-        "rollup-plugin-postcss": "^4.0.2",
+        "rollup": "^4.40.1",
         "rollup-plugin-typescript2": "^0.36.0",
-        "ts-jest": "^29.2.6",
-        "typescript": "^5.8.2"
+        "typescript": "^5.8.3"
     },
     "dependencies": {
-        "@aurelia/kernel": "2.0.0-beta.23",
-        "@aurelia/metadata": "2.0.0-beta.23",
-        "@aurelia/platform": "2.0.0-beta.23",
-        "@aurelia/runtime": "2.0.0-beta.23",
-        "@aurelia/runtime-html": "2.0.0-beta.23"
+        "@aurelia/kernel": "2.0.0-beta.24",
+        "@aurelia/metadata": "2.0.0-beta.24",
+        "@aurelia/platform": "2.0.0-beta.24",
+        "@aurelia/runtime": "2.0.0-beta.24",
+        "@aurelia/runtime-html": "2.0.0-beta.24"
     }
 }
