--- a/package.json
+++ b/package.json
@@ -22,7 +22,24 @@
         "@rollup/plugin-terser": "^0.4.4",
         "rollup": "^4.40.1",
         "rollup-plugin-typescript2": "^0.36.0",
-        "typescript": "^5.8.3"
+        "typescript": "^5.8.3",
+        "@babel/preset-env": "^7.27.2",
+        "@types/babel__preset-env": "^7.10.0",
+        "@types/babel__generator": "^7.27.0",
+        "@types/babel__template": "^7.4.4",
+        "@types/babel__core": "^7.20.5",
+        "@types/body-parser": "^1.19.5",
+        "@types/estree": "^1.0.7",
+        "@types/http-errors": "^2.0.4",
+        "@types/istanbul-lib-report": "^3.0.3",
+        "@types/json-schema": "^7.0.15",
+        "@types/qs": "^6.14.0",
+        "@types/range-parser": "^1.2.7",
+        "@types/send": "^0.17.4",
+        "@types/sizzle": "^2.3.9",
+        "@types/tough-cookie": "^4.0.5",
+        "@types/yargs-parser": "^21.0.3",
+        "@types/babel-types": "^7.0.16"
     },
     "dependencies": {
         "@aurelia/kernel": "2.0.0-beta.24",
