--- a/package.json
+++ b/package.json
@@ -1,51 +1,56 @@
 {
     "name": "aurelia2-table",
-    "version": "0.0.8",
+    "type": "module",
+    "version": "2.0.0-beta.26",
     "description": "A port of the Aurelia Table plugin to v2",
-    "main": "dist/aurelia2-table.js",
+    "files": [
+        "dist",
+        "README.md"
+    ],
     "module": "dist/aurelia2-table.es.js",
     "browser": "dist/aurelia2-table.bundle.js",
-    "types": "dist/index.d.ts",
+    "types": "dist/aurelia2-table.es.d.ts",
     "repository": "https://github.com/Vheissu/aurelia2-table",
     "author": "Dwayne Charrington <dwaynecharrington@gmail.com",
     "license": "MIT",
-
     "scripts": {
-        "build": "rollup -c --bundleConfigAsCjs",
+        "build": "rollup -c",
+        "build:types": "rollup -c rollup.config.dts.js",
         "prebuild": "tsc --emitDeclarationOnly",
-        "build:watch": "rollup -cw --bundleConfigAsCjs"
+        "build:watch": "rollup -cw"
     },
     "devDependencies": {
-        "@aurelia/plugin-conventions": "2.0.0-beta.24",
+        "@aurelia/plugin-conventions": "2.0.0-beta.26",
+        "@babel/preset-env": "^7.28.3",
         "@rollup/plugin-html": "^2.0.0",
         "@rollup/plugin-json": "^6.1.0",
         "@rollup/plugin-terser": "^0.4.4",
-        "rollup": "^4.40.1",
-        "rollup-plugin-typescript2": "^0.36.0",
-        "typescript": "^5.8.3",
-        "@babel/preset-env": "^7.27.2",
-        "@types/babel__preset-env": "^7.10.0",
-        "@types/babel__generator": "^7.27.0",
-        "@types/babel__template": "^7.4.4",
         "@types/babel__core": "^7.20.5",
-        "@types/body-parser": "^1.19.5",
-        "@types/estree": "^1.0.7",
-        "@types/http-errors": "^2.0.4",
+        "@types/babel__generator": "^7.27.0",
+        "@types/babel__preset-env": "^7.10.0",
+        "@types/babel__template": "^7.4.4",
+        "@types/babel-types": "^7.0.16",
+        "@types/body-parser": "^1.19.6",
+        "@types/estree": "^1.0.8",
+        "@types/http-errors": "^2.0.5",
         "@types/istanbul-lib-report": "^3.0.3",
         "@types/json-schema": "^7.0.15",
         "@types/qs": "^6.14.0",
         "@types/range-parser": "^1.2.7",
-        "@types/send": "^0.17.4",
-        "@types/sizzle": "^2.3.9",
+        "@types/send": "^0.17.5",
+        "@types/sizzle": "^2.3.10",
         "@types/tough-cookie": "^4.0.5",
         "@types/yargs-parser": "^21.0.3",
-        "@types/babel-types": "^7.0.16"
+        "rollup": "^4.52.4",
+        "rollup-plugin-dts": "^6.2.3",
+        "rollup-plugin-typescript2": "^0.36.0",
+        "typescript": "^5.9.3"
     },
     "dependencies": {
-        "@aurelia/kernel": "2.0.0-beta.24",
-        "@aurelia/metadata": "2.0.0-beta.24",
-        "@aurelia/platform": "2.0.0-beta.24",
-        "@aurelia/runtime": "2.0.0-beta.24",
-        "@aurelia/runtime-html": "2.0.0-beta.24"
+        "@aurelia/kernel": "2.0.0-beta.26",
+        "@aurelia/metadata": "2.0.0-beta.26",
+        "@aurelia/platform": "2.0.0-beta.26",
+        "@aurelia/runtime": "2.0.0-beta.26",
+        "@aurelia/runtime-html": "2.0.0-beta.26"
     }
 }
